# calculator_server_http

./: .gitignore  README.md  pyproject.toml
calculator_server/: HTTP_server.py  TCP_server.py  __init__.py  calculate.py  calculations.py  daemon.py  resources.py
tests/: test_TCP_server.py  test_calculate.py  test_calculations.py  test_calculator.py  test_daemon.py  test_resources.py
