[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator_server_http_idziegrzesprzezbobrow"
version = "0.0.3"
authors = [
  { name="Greg", email="" },
]
description = "A simple http calculator server package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs==22.2.0",
    "exceptiongroup==1.1.0",
    "iniconfig==1.1.1",
    "packaging==22.0",
    "pluggy==1.0.0",
    "tomli==2.0.1"
]
packages = [
    {include = "calculator_server"},
    {exclude = "tests"}
]
exclude = [
    "venv_serv",
    ".gitignore",
    ".pytest_cache"
]

[project.optional-dependencies]
test = ["pytest==7.2.0"]

[project.scripts]
calculator_server = "calculator_server.HTTP_server:main"